--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: java
 
 script:
-  - mvn install -Dmaven.javadoc.skip=true -B -V
-  - mvn test -B
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
 after_success:
   - mvn clean cobertura:cobertura coveralls:report
