--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ script:
   - mvn test -B
 
 after_success:
-  - mvn clean cobertura:cobertura coveralls:report
+  - mvn clean test jacoco:report coveralls:report
