Setup Coveralls testing reports.

--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,11 @@
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>4.2.0</version>
             </plugin>
-
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.7</version>
+            </plugin>
         </plugins>
     </build>
 </project>
