--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.prolific.dev</groupId>
     <artifactId>graham-scan</artifactId>
-    <version>${revision}-${branch}-SNAPSHOT</version>
+    <version>${revision}-${branch}</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <javafx.version>17.0.12</javafx.version>
+        <revision>0.0.1-SNAPSHOT</revision>
+        <branch>dev</branch>
     </properties>
     <dependencies>
         <dependency>
