fix pom.xml maven jar plugin

--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <groupId>org.prolific.dev</groupId>
     <artifactId>graham-scan</artifactId>
     <version>${revision}-${branch}</version>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
@@ -50,6 +51,18 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>org.prolific.dev.App</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
             </plugin>
         </plugins>
     </build>
