--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,9 +42,9 @@ jobs:
       - name: Run the application on Linux
         if: runner.os == 'Linux'
         run: |
-          java -jar target/graham-scan-${{ github.sha }}-${{ github.ref_name }}.jar
+          mvn javafx:run target/graham-scan-${{ github.sha }}-${{ github.ref_name }}.jar
 
       - name: Run the application on Windows
         if: runner.os == 'Windows'
         run: |
-          java -jar target\graham-scan-${{ github.sha }}-${{ github.ref_name }}.jar
+          mvn javafx:run target\graham-scan-${{ github.sha }}-${{ github.ref_name }}.jar
