add use of Xvfb to simulate display on linux runner

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,9 +39,14 @@ jobs:
         run: |
           mvn clean package -Drevision=${{ github.sha }} -Dbranch=${{ github.ref_name }}
 
-      - name: Run the application on Linux
+      # Use Xvfb to simulate a display on Linux
+      - name: Start Xvfb on Linux
         if: runner.os == 'Linux'
         run: |
+          sudo apt-get update
+          sudo apt-get install xvfb
+          Xvfb :99 -ac &
+          export DISPLAY=:99
           mvn javafx:run -Drevision=${{ github.sha }} -Dbranch=${{ github.ref_name }}
 
       - name: Run the application on Windows
