--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,14 +40,14 @@ jobs:
           mvn clean package -Drevision=${{ github.sha }} -Dbranch=${{ github.ref_name }}
 
       # Use Xvfb to simulate a display on Linux
-      - name: Start Xvfb on Linux
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install xvfb
-          Xvfb :99 -ac &
-          export DISPLAY=:99
-          mvn javafx:run -Drevision=${{ github.sha }} -Dbranch=${{ github.ref_name }}
+      #- name: Start Xvfb on Linux
+      #  if: runner.os == 'Linux'
+      #  run: |
+      #    sudo apt-get update
+      #    sudo apt-get install xvfb
+      #    Xvfb :99 -ac &
+      #    export DISPLAY=:99
+      #    mvn javafx:run -Drevision=${{ github.sha }} -Dbranch=${{ github.ref_name }}
 
       - name: Run the application on Windows
         if: runner.os == 'Windows'
