--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,15 +39,15 @@ jobs:
         run: |
           mvn clean package -Drevision=${{ github.sha }} -Dbranch=${{ github.ref_name }}
 
-      - name: Setup Xvfb
-        if: runner.os == 'Linux'
-        uses: GabrielBB/xvfb-action@v1
-
-      - name: Run the application on Linux
+      # Use Xvfb to simulate a display on Linux
+      - name: Start Xvfb on Linux
         if: runner.os == 'Linux'
         run: |
+          sudo apt-get update
+          sudo apt-get install xvfb
+          Xvfb :99 -ac &
           export DISPLAY=:99
-          mvn javafx:run -Drevision=${{ github.sha }} -Dbranch=${{ github.ref_name }}
+          xvfb mvn javafx:run -Drevision=${{ github.sha }} -Dbranch=${{ github.ref_name }}
 
       - name: Run the application on Windows
         if: runner.os == 'Windows'
