--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,7 +47,7 @@ jobs:
           sudo apt-get install xvfb
           Xvfb :99 -ac &
           export DISPLAY=:99
-          xvfb mvn javafx:run -Drevision=${{ github.sha }} -Dbranch=${{ github.ref_name }}
+          xvfb-run mvn javafx:run -Drevision=${{ github.sha }} -Dbranch=${{ github.ref_name }}
 
       - name: Run the application on Windows
         if: runner.os == 'Windows'
