--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,24 +39,6 @@ jobs:
         run: |
           mvn clean package -Drevision=${{ github.sha }} -Dbranch=${{ github.ref_name }}
 
-      - name: Ensure no previous Xvfb instances
-        if: runner.os == 'Linux'
-        run: |
-          sudo pkill Xvfb || true
-
-      # Use Xvfb to simulate a display on Linux
-      - name: Start Xvfb and run tests on Linux
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y xvfb xauth x11-utils
-          Xvfb :99 -screen 0 1920x1080x24 -ac &
-          sleep 5  # Give Xvfb some time to start
-          export DISPLAY=:99
-          xvfb-run mvn javafx:run -Drevision=${{ github.sha }} -Dbranch=${{ github.ref_name }}
-
-      # Run the application on Windows
-      - name: Run the application on Windows
-        if: runner.os == 'Windows'
+      - name: Run the application
         run: |
           mvn javafx:run -Drevision=${{ github.sha }} -Dbranch=${{ github.ref_name }}
