--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -73,4 +73,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: built-exe
-          path: GrahamScan-0.0.1-SNAPSHOT.exe
+          path: GrahamScan-0.0.1.exe
