--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,8 +37,8 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ~/.m2/repository # Linux
-            C:\Users\runneradmin\.m2\repository # Windows
+            ${{ env.HOME }}/.m2/repository # Linux/macOS
+            ${{ env.USERPROFILE }}\.m2\repository # Windows
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
@@ -59,7 +59,7 @@ jobs:
             --type exe `
             --app-version 0.0.1 `
             --main-class org.prolific.dev.App `
-            --module-path C:\Users\runneradmin\.m2\repository\org\openjfx\javafx-controls\17.0.12\javafx-controls-17.0.12.jar;C:\Users\runneradmin\.m2\repository\org\openjfx\javafx-graphics\17.0.12\javafx-graphics-17.0.12.jar;C:\Users\runneradmin\.m2\repository\org\openjfx\javafx-base\17.0.12\javafx-base-17.0.12.jar;C:\Users\runneradmin\.m2\repository\org\openjfx\javafx-fxml\17.0.12\javafx-fxml-17.0.12.jar `
+            --module-path C:\Users\${{ env.USERPROFILE }}\.m2\repository\org\openjfx\javafx-controls\17.0.12\javafx-controls-17.0.12.jar;C:\Users\runneradmin\.m2\repository\org\openjfx\javafx-graphics\17.0.12\javafx-graphics-17.0.12.jar;C:\Users\runneradmin\.m2\repository\org\openjfx\javafx-base\17.0.12\javafx-base-17.0.12.jar;C:\Users\runneradmin\.m2\repository\org\openjfx\javafx-fxml\17.0.12\javafx-fxml-17.0.12.jar `
             --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.base
 
       # Upload JAR artifact (Linux and Windows)
