--- a/pom.xml
+++ b/pom.xml
@@ -97,8 +97,9 @@
                                 </includes>
                             </artifactSet>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"/>
-                                <mainClass>org.prolific.dev.App</mainClass>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>org.prolific.dev.App</mainClass>
+                                </transformer>
                             </transformers>
                         </configuration>
                     </execution>
